# napari-phasors

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  biaplotter update.py  biaplotter_error.py  class RangeSlider.py  codecov.yml  conftest.py  logo.py  notebook.ipynb  phasor_plotter_canvas_click_test.py  prueba.ome.tif  pyproject.toml  requirements.txt  run.py  setup.cfg  tox.ini  try_run_paramecium.py
.github/workflows/: build-installer.yml  run-tests.yml  test.yml
docs/: ._config.yml  ._toc.yml  .gitignore  _config.yml  _toc.yml  code_of_conduct.md  contributing.md  installation.md  intro.md  requirements.txt  sample_data.md
docs/api/: index.md
docs/guides/: batch_analysis.md  calibration.md  component_analysis.md  components.md  custom_import.md  exporting.md  filtering_thresholding.md  flim_workflow.md  fret_analysis.md  histogram_statistics.md  hyperspectral_workflow.md  mask.md  multi_layer_analysis.md  open_files.md  phasor_mapping.md  phasor_selection.md  plot_customization.md  selections.md
installer/: README.md  post_install.bat  post_install.sh
src/napari_phasors/: __init__.py  _batch_analysis.py  _flimari.py  _reader.py  _sample_data.py  _synthetic_generator.py  _update_check.py  _utils.py  _widget.py  _writer.py  calibration_tab.py  components_tab.py  filter_tab.py  fret_tab.py  lifetime_tab.py  napari.yaml  phasor_mapping_tab.py  plotter.py  run_test_file.py  selection_tab.py  try_load_calibration_widget.py
src/napari_phasors.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/napari_phasors/_tests/: conftest.py  test_batch_analysis.py  test_calibration_tab.py  test_components_tab.py  test_conftest.py  test_data_utils.py  test_filter_tab.py  test_flimari.py  test_fret_tab.py  test_import_export_settings.py  test_lifetime_tab.py  test_performance.py  test_phasor_mapping_tab.py  test_plotter.py  test_plotter_dialogs.py  test_plotter_features.py  test_plotter_masks.py  test_plotter_tabs_toolbar.py  test_qt_backend.py  test_reader.py  test_reader_pure.py  test_sample_data.py  test_selection_tab.py  test_synthetic_generator.py  test_update_check.py  test_utils.py  test_utils_pure.py  test_utils_widgets.py  test_widget.py  test_widget_pure.py  test_writer.py  test_writer_pure.py
src/napari_phasors/_tests/test_data/: test_file.ome.tif
src/napari_phasors/ui/: calibration_widget.ui  plotter_inputs_widget.ui  plotter_inputs_widget_extra.ui  selection_tab.ui
