[project]
name = "napari-phasors"
dynamic = ["version"]
description = "A simple plugin to use phasor analysis"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Bruno Pannunzio", email = "bpannunzio@pasteur.edu.uy" },
    { name = "Marcelo Leomil Zoccoler", email = "marzoccoler@gmail.com" },
    { name = "Bruno Schuty", email = "schutyb@schutyb.com" },
    { name = "Leonel Malacrida", email = "lmalacrida@pasteur.edu.uy" },
    ]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization"
]
dependencies = [
    "phasorpy==0.7",
    "qtpy",
    "scikit-image",
    "biaplotter>=0.4.2",
    "lfdfiles",
    "fbdfile",
    "sdtfile",
    "ptufile",
    "tifffile",
    "pandas",
    "pyqt5",
    "pawflim"
]

[project.optional-dependencies]
testing = [
    "tox",
    "pytest",  # https://docs.pytest.org/en/latest/contents.html
    "pytest-cov",  # https://pytest-cov.readthedocs.io/en/latest/
    "pytest-qt",  # https://pytest-qt.readthedocs.io/en/latest/
    "napari",
    "qtpy",
    "scikit-image",
    "biaplotter>=0.4.2",
    "PyQt5",
    "pandas",
    "black",
    "isort",
    "phasorpy==0.7",
    "tifffile",
    "lfdfiles",
    "fbdfile",
    "sdtfile",
    "ptufile",
    "pawflim"
]

[project.entry-points."napari.manifest"]
"napari-phasors" = "napari_phasors:napari.yaml"

[project.urls]
"Homepage" = "https://github.com/napari-phasors/napari-phasors"
"Bug Tracker" = "https://github.com/napari-phasors/napari-phasors/issues"
"Documentation" = "https://github.com/napari-phasors/napari-phasors#README.md"
"Source Code" = "https://github.com/napari-phasors/napari-phasors"
"User Support" = "https://github.com/napari-phasors/napari-phasors/issues"

[build-system]
requires = ["setuptools>=42.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.setuptools_scm]
write_to = "src/napari_phasors/_version.py"
fallback_version = "0.1"

[tool.black]
line-length = 79
target-version = ["py310"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 79

[tool.ruff]
line-length = 79
lint.select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
lint.ignore = [
    "E501", # line too long. let black handle this
    "UP006", "UP007", # type annotation. As using magicgui require runtime type annotation then we disable this.
    "SIM117", # flake8-simplify - some of merged with statements are not looking great with black, reanble after drop python 3.9
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*vendored*",
    "*_vendor*",
]

target-version = "py311"
fix = true
