[project]
name = "napari-phasors"
dynamic = ["version"]
description = "A simple plugin to use phasor analysis"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Bruno Pannunzio", email = "bpannunzio@pasteur.edu.uy" },
    { name = "Marcelo Leomil Zoccoler", email = "marzoccoler@gmail.com" },
    { name = "Joaquín Rivero", email = "jrivero94@outlook.com" },
    { name = "Bruno Schuty", email = "schutyb@schutyb.com" },
    { name = "Leonel Malacrida", email = "lmalacrida@pasteur.edu.uy" },
    ]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization"
]
dependencies = [
    "phasorpy>=0.10",
    "qtpy",
    "biaplotter>=0.4.2",
    "fbdfile",
    "sdtfile",
    "ptufile",
    "tifffile",
    "pandas",
    "pyqt6",
    "pawflim",
    "scipy",
    "czifile",
    "lfdfiles"
]

[project.optional-dependencies]
testing = [
    "tox",
    "pytest",  # https://docs.pytest.org/en/latest/contents.html
    "pytest-cov",  # https://pytest-cov.readthedocs.io/en/latest/
    "pytest-qt",  # https://pytest-qt.readthedocs.io/en/latest/
    "pytest-xdist",  # https://pytest-xdist.readthedocs.io/ (parallel test runs)
    "pytest-timeout",  # https://pypi.org/project/pytest-timeout/ (kills hung Qt workers)
    "napari",
    "qtpy",
    "scikit-image",
    "biaplotter>=0.4.2",
    "pyqt6",
    "pandas",
    "black",
    "isort",
    "ruff",
    "pre-commit",
    "phasorpy>=0.10",
    "tifffile",
    "fbdfile",
    "sdtfile",
    "ptufile",
    "pawflim",
    "scipy",
    "czifile",
    "lfdfiles"
]

[tool.pytest.ini_options]
# Run the (Qt-heavy) test suite in parallel across all CPU cores.
# ``--dist loadfile`` keeps every test from the same file on a single worker,
# which avoids PySide6 teardown segfaults caused by interleaving tests from
# different modules on one worker. Override with ``-n0`` for serial debugging.
#
# ``--timeout`` is a safety net for the recurring PySide6 + xdist worker hangs
# (a worker deadlocks inside a C-level Qt event loop and never returns to
# Python). ``--timeout-method=thread`` runs the watchdog in a separate thread
# so it can kill the worker even when the main thread is blocked in C — the
# default ``signal`` method cannot, since its handler only runs at a Python
# bytecode boundary. On expiry it dumps every thread's stack (pinpointing the
# hang) and terminates the worker, so the job fails fast instead of stalling
# until GitHub's 6-hour cap.
addopts = "-n auto --dist loadfile --timeout=300 --timeout-method=thread"
# Silence benign, unavoidable third-party teardown/rendering warnings so the
# test output stays readable. Genuine deprecations in our own code are fixed
# rather than filtered. Each entry below is library noise we cannot act on:
filterwarnings = [
    # PySide6 emits a RuntimeWarning when a *defensive* signal.disconnect()
    # targets a slot that is not (or no longer) connected. Our teardown code
    # already wraps these in contextlib.suppress(); PySide6 only warns instead
    # of raising, so this is the dominant (thousands of) benign messages.
    "ignore:libpyside:RuntimeWarning",
    # napari DirectLabelColormap without an explicit ``None`` default: missing
    # labels are intentionally rendered transparent in our selection overlays.
    "ignore:color_dict did not provide a default color:UserWarning",
    # Matplotlib rendering of degenerate/empty data in widget tests.
    "ignore:No artists with labels found to put in legend:UserWarning",
    "ignore:Attempting to set identical low and high:UserWarning",
    # tifffile's upcoming default change for non-RGB arrays whose leading or
    # trailing dimension happens to be 3/4 (our phasor stacks are not RGB).
    "ignore:<tifffile.TiffWriter.write>",
    # Pydantic v2 deprecation emitted from napari's own models on import.
    "ignore:.*json_encoders.*:DeprecationWarning",
]

[project.entry-points."napari.manifest"]
"napari-phasors" = "napari_phasors:napari.yaml"

[project.urls]
"Homepage" = "https://github.com/napari-phasors/napari-phasors"
"Bug Tracker" = "https://github.com/napari-phasors/napari-phasors/issues"
"Documentation" = "https://github.com/napari-phasors/napari-phasors#README.md"
"Source Code" = "https://github.com/napari-phasors/napari-phasors"
"User Support" = "https://github.com/napari-phasors/napari-phasors/issues"

[build-system]
requires = ["setuptools>=42.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.setuptools_scm]
write_to = "src/napari_phasors/_version.py"
fallback_version = "0.0.0"

[tool.black]
line-length = 79
target-version = ["py312", "py313", "py314"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 79

[tool.ruff]
line-length = 79
lint.select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
lint.ignore = [
    "E501", # line too long. let black handle this
    "UP006", "UP007", # type annotation. As using magicgui require runtime type annotation then we disable this.
    "SIM117", # flake8-simplify - some of merged with statements are not looking great with black, reanble after drop python 3.9
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*vendored*",
    "*_vendor*",
]

target-version = "py312"
fix = true
