[metadata]
name = napari-phasors
version = attr: napari_phasors.__version__
description = A simple plugin to use phasor analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/napari-phasors/napari-phasors
author = Bruno Schuty, Bruno Pannunzio, Marcelo Leomil Zoccoler
author_email = schutyb@schutyb.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/napari-phasors/napari-phasors/issues
    Documentation = https://github.com/napari-phasors/napari-phasors#README.md
    Source Code = https://github.com/napari-phasors/napari-phasors
    User Support = https://github.com/napari-phasors/napari-phasors/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy
    scikit-image
    biaplotter>=0.0.4
    git+https://github.com/phasorpy/phasorpy.git@main#egg=phasorpy

python_requires = >=3.10
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-phasors = napari_phasors:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
