[metadata]
name = napari-phasors
version = attr: napari_phasors.__version__
description = A simple plugin to use phasor analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/napari-phasors/napari-phasors
author = Bruno Pannunzio, Marcelo L. Zoccoler, Bruno Schuty, Leonel Malacrida
author_email = bpannunzio@pasteur.edu.uy, marzoccoler@gmail.com, schutyb@schutyb.com, lmalacrida@pasteur.edu.uy
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/napari-phasors/napari-phasors/issues
    Documentation = https://github.com/napari-phasors/napari-phasors#README.md
    Source Code = https://github.com/napari-phasors/napari-phasors
    User Support = https://github.com/napari-phasors/napari-phasors/issues

[options]
packages = find:
install_requires =
    phasorpy==0.3
    qtpy
    scikit-image
    biaplotter>=0.0.5a2
    lfdfiles
    sdtfile
    ptufile
    tifffile
    pandas
    pyqt5

python_requires = >=3.10
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src
include = napari_phasors
          napari_phasors.ui
[options.entry_points]
napari.manifest =
    napari-phasors = napari_phasors:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    qtpy
    scikit-image
    biaplotter>=0.0.5a0
    PyQt5
    pandas
    black
    isort
    phasorpy==0.3
    tifffile
    lfdfiles
    sdtfile
    ptufile
    


[options.package_data]
* = *.yaml
napari_phasors.ui = *.ui